--- a/main.html
+++ b/main.html
@@ -10,7 +10,38 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form action="#" method="">
+            <label for="name">Name*</label>
+            <input type="text" name="name" id="Name" required>
+<br>
+            <label for="Email">Email*</label>
+            <input type="mail" name="Email" id="Email" required>
+<br>
+            <label for="Gender">Gender*</label><br>
+            <label for="Male">Male</label>
+            <input type="radio" name="Gender" id="Gender" value="Male"> 
+            <label for="Female">Female</label>
+            <input type="radio" name="Gender" id="Gender" value="Female">
+<br>
+            <label for="Options">Car Brands</label>
+           <select name="Options" id="Car">
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Mercedez">Mercedez</option>
 
+           </select>
+<br>
+            <label for="Car-Age">Car age*</label>
+            <input type="number" name="Car-Age" id="Car-Age"  required>
+<br>
+            <label for="dop">Date of Purchase*</label>
+            <input type="date" name="dop" id="dop" required>
+<br>
+            <label for="Password">Password*</label>
+            <input type="password" name="Password" id="Password" required>
+<br>
+            <button type="submit">submit</button>
+        </form>
 </body>
 
 </html>
