--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
 <br>
             <label for="Gender">Gender*</label><br>
             <label for="Male">Male</label>
-            <input type="radio" name="Gender" id="Gender" value="Male"> 
+            <input type="radio" name="Gender" id="gender" value="Male" required > 
             <label for="Female">Female</label>
-            <input type="radio" name="Gender" id="Gender" value="Female">
+            <input type="radio" name="Gender" id="gender" value="Female" required>
 <br>
             <label for="Options">Car Brands</label>
            <select name="Options" id="Car">
