--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </script>
 	<form action="#" method="">
             <label for="name">Name*</label>
-            <input type="text" name="name" id="Name" required>
+            <input type="text" name="name" id="name" required>
 <br>
             <label for="Email">Email*</label>
-            <input type="mail" name="Email" id="Email" required>
+            <input type="mail" name="Email" id="email" required>
 <br>
             <label for="Gender">Gender*</label><br>
             <label for="Male">Male</label>
@@ -24,7 +24,7 @@
             <input type="radio" name="Gender" id="gender" value="Female" required>
 <br>
             <label for="Options">Car Brands</label>
-           <select name="Options" id="Car">
+           <select name="Options" id="cars">
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
             <option value="Mercedez">Mercedez</option>
@@ -32,13 +32,13 @@
            </select>
 <br>
             <label for="Car-Age">Car age*</label>
-            <input type="number" name="Car-Age" id="Car-Age"  required>
+            <input type="number" name="Car-Age" id="carage"  required>
 <br>
             <label for="dop">Date of Purchase*</label>
             <input type="date" name="dop" id="dop" required>
 <br>
             <label for="Password">Password*</label>
-            <input type="password" name="Password" id="Password" required>
+            <input type="password" name="Password" id="password" required>
 <br>
             <button type="submit">submit</button>
         </form>
