--- a/main.html
+++ b/main.html
@@ -14,16 +14,16 @@
             <label for="name">Name*</label>
             <input type="text" name="name" id="name" required>
 <br>
-            <label for="Email">Email*</label>
-            <input type="mail" name="Email" id="email" required>
+            <label for="email">Email*</label>
+            <input type="mail" name="email" id="email" required>
 <br>
-            <label for="Gender">Gender*</label><br>
+            <label for=gGender">Gender*</label><br>
             <label for="Male">Male</label>
-            <input type="radio" name="Gender" id="gender" value="Male" required > 
+            <input type="radio" name="gender" id="gender" value="Male" required > 
             <label for="Female">Female</label>
-            <input type="radio" name="Gender" id="gender" value="Female" required>
+            <input type="radio" name="gender" id="gender" value="Female" required>
 <br>
-            <label for="Options">Car Brands</label>
+            <label for="cars">Car Brands</label>
            <select name="Options" id="cars">
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
@@ -31,14 +31,14 @@
 
            </select>
 <br>
-            <label for="Car-Age">Car age*</label>
-            <input type="number" name="Car-Age" id="carage"  required>
+            <label for="carage">Car age*</label>
+            <input type="number" name="carage" id="carage"  required>
 <br>
             <label for="dop">Date of Purchase*</label>
             <input type="date" name="dop" id="dop" required>
 <br>
-            <label for="Password">Password*</label>
-            <input type="password" name="Password" id="password" required>
+            <label for="password">Password*</label>
+            <input type="password" name="password" id="password" required>
 <br>
             <button type="submit">submit</button>
         </form>
