--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form action="#" method="">
+	<form action="#" method="post">
             <label for="name">Name*</label>
             <input type="text" name="name" id="name" required>
 <br>
